@@ -14,6 +14,8 @@ RELEASE 0.11 - XXX
 
   - Add support for IRIX and the SGI MIPSPro tool chain.
 
+  - Support using the MSVC tool chain when running Cygwin Python.
+
   From Charles Crain:
 
   - Added new AddPreAction() and AddPostAction() functions that support
